k8s-exam/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-webapp-color
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: exam-webapp-color
